# masters-project

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  railpack.json  requirements.txt
.claude/rules/: css-styling.md  pr-conventions.md
.claude/skills/github-issues/: SKILL.md
.github/workflows/: deploy.yml
backend/: advisory.py  chat.py  counterfactual.py  main.py  railpack.json  requirements.txt  trends.py
data/processed/: cdfa_clean.parquet  cimis_clean.parquet  dwr_clean.parquet  feature_matrix.parquet  features_climate.parquet  features_water.parquet  ssurgo_clean.parquet
design/: masters-project.pen
docs/: architecture.md  cimis-stations.md  data-sources.md  design-decisions.md  reasoning.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
models/: baselines.json  evaluation_metrics.json  feature_names.json  gradient_boosting_model.pkl  training_config.json
notebooks/: eda_features.ipynb  evaluation_report.ipynb  shap_analysis.ipynb
src/: config.py
src/advisory/: generate.py
src/features/: build_climate_features.py  build_feature_matrix.py  build_water_features.py
src/ingestion/: clean_cdfa.py  clean_cimis.py  clean_dwr.py  clean_nass_acreage.py  clean_prism.py  clean_ssurgo.py  identify_cimis_stations.py  ingest_cdfa.py  ingest_cimis.py  ingest_dwr.py  ingest_nass_acreage.py  ingest_prism.py  ingest_ssurgo.py  test_prism.py  utils.py
src/models/: baselines.py  train_gb.py  train_ridge.py
src/output/: prediction.py
(+446 files in other folders)
